# minesweeper_ftxui

./: CMakeLists.txt  README.md  conanfile.txt
configured_files/: config.hpp.in
emscripten/: CMakeLists.txt  highscores.html  index.html
server/: lambda_function.py
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  board.cpp  board.h  game.cpp  game.h  main.cpp  minesweeper.cpp
test/: CMakeLists.txt  board_tests.cpp  game_tests.cpp
